# yaml-transform

./: .envrc  README.md  TODO.norg  flake.nix  hie.yaml  justfile  yaml-transform.cabal
.golden/Parser-fixtures/basic-spaces.yml/: actual
.golden/Parser-fixtures/basic-tabs.yml/: golden
.golden/fixtures/basic-spaces.yml/: actual  golden
.golden/fixtures/basic-tabs.yml/: actual
.golden/parser-fixtures/basic.yml/: actual  golden
.golden/parser-fixtures/with-anchors.yml/: actual  golden
specs/: Main.hs
specs/Specs/: ParserSpec.hs  SerializerSpec.hs  TransformerSpec.hs
specs/fixtures/: basic-spaces.yml  basic-tabs.yml  basic.yml  with-anchors.yml
src/: Main.hs
src/YamlTransform/: Parser.hs  Serializer.hs  Transformer.hs  Types.hs
src/YamlTransform/Parser/: Util.hs
