cabal-version:   3.0
name:            yaml-transform
version:         0.1.0.0
license:         MIT
author:          Akshay
maintainer:      phenax5@gmail.com
build-type:      Simple

common warnings
  ghc-options: -Wall

executable yaml-transform
  import:           warnings
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   src
  default-language: Haskell2010
