cabal-version:   3.0

name:            yaml-transform
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Transform yaml files
description:     Transform properties in a yaml files while preserving comments

common common-config
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -Wextra -Wno-unused-do-bind -fwarn-tabs -Wname-shadowing
  default-extensions:
    OverloadedStrings,
    LambdaCase
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base,
    text,
    containers,
    -- transformers,
    attoparsec

executable yaml-transform
  import: common-config
  main-is: Main.hs
  build-depends: lib-yaml-transform
  other-modules:
    YamlTransform.Parser

library lib-yaml-transform
  import: common-config
  exposed-modules:
    YamlTransform.Parser

test-suite specs-yt
  import: common-config
  type: exitcode-stdio-1.0
  hs-source-dirs: specs, src
  other-modules:
    YamlTransform.Parser
  main-is: Main.hs
  build-depends:
    hspec
