cabal-version:   3.0

name:            yaml-transform
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Transform yaml files
description:     Transform properties in a yaml files while preserving comments

extra-source-files: specs/fixtures/*.yml

common common-config
  default-extensions:
    OverloadedStrings,
    LambdaCase,
    QuasiQuotes,
    TemplateHaskell,
    NamedFieldPuns
  default-language: Haskell2010
  build-depends:
    base,
    text,
    containers,
    attoparsec

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wextra -Wno-unused-do-bind -Wname-shadowing
    -fwarn-tabs -fprint-explicit-foralls -fprint-explicit-kinds

executable yaml-transform
  import: common-config, warnings
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: lib-yaml-transform
  other-modules:
    YamlTransform.Parser,
    YamlTransform.Parser.Util,
    YamlTransform.Serializer,
    YamlTransform.Transformer,
    YamlTransform.Types

library lib-yaml-transform
  import: common-config, warnings
  hs-source-dirs: src
  exposed-modules:
    YamlTransform.Parser,
    YamlTransform.Parser.Util,
    YamlTransform.Serializer,
    YamlTransform.Transformer,
    YamlTransform.Types

test-suite specs
  import: common-config
  type: exitcode-stdio-1.0
  hs-source-dirs: specs
  main-is: Main.hs
  other-modules:
    Specs.ParserSpec,
    Specs.SerializerSpec,
    Specs.TransformerSpec
  build-depends:
    lib-yaml-transform,
    neat-interpolation,
    pretty-simple,
    hspec-golden,
    file-embed,
    filepath,
    directory,
    hspec
